# ai-web

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: pull_request_template.md
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/aiweb/: __init__.py  agent_hub.py  db.py  function_map_context.py  main.py  runtime_config.py  settings.py  sites.py  slots.py
backend/aiweb/agent/: __init__.py  __main__.py  main.py
backend/aiweb/api/: __init__.py  assets.py  browser_agents.py  config.py  devices.py  queue.py  sites.py  submissions.py
backend/aiweb/kernel/: __init__.py  actions.py  assertion.py  browser.py  executor.py  prompt.py  runner.py  stuck.py
backend/aiweb/kernel/llm/: __init__.py  base.py
backend/aiweb/kernel/llm/assistants/: __init__.py  claude.py  doubao.py  openai.py
backend/aiweb/kernel/llm/main/: __init__.py  _cu_common.py  claude_cu.py  doubao_responses.py  gpt_cu.py
backend/aiweb/models/: __init__.py  asset.py  base.py  config.py  item.py  run.py  site.py  submission.py
backend/aiweb/report/: __init__.py  builder.py
backend/aiweb/report/templates/: report.html.j2  summary.html.j2
backend/aiweb/scheduler/: __init__.py  dispatcher.py  reaper.py  service.py  worker.py
backend/aiweb/storage/: __init__.py  backend.py
backend/aiweb/webhook/: __init__.py  publisher.py
backend/tests/: test_agent_asset_sync.py  test_browser_environment.py  test_submission_service.py
backend/tools/: probe_actions.py
cli/: aiweb_cli.py
docs/: Function-Map.md  README.md  多模型协议（豆包·Claude·GPT）.md  (+16 more)
(+16 files in other folders)
