[project]
name = "aiweb"
version = "0.1.0"
description = "AI Web — 用自然语言驱动浏览器执行 Web 自动化的执行中台（个人开源版）"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "websockets>=12.0",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
agent = ["playwright>=1.45"]
dev = ["ruff>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aiweb"]

[tool.ruff]
line-length = 120
target-version = "py311"
